--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 url=jdbc:mysql://fishshop.mysql.database.azure.com:3306/digitalproducts?useSSL=true
-user="maity"
+user="hoangthaininh"
 pass=ConCaNon123
 CLOUDINARY_CLOUD_NAME= dojg2yifd
 CLOUDINARY_API_KEY= 737779159834995
